backends/drm: enable pipelines for VR headsets

Otherwise, the pipeline state from an earlier hotplug scenario can leave
the pipeline disabled and without a CRTC, which means leasing the output
will fail

BUG: 487938
FIXED-IN: 6.1.0